chore: Made creatorID a pointer and now fetching guides also fetches creator along with it. Also cleaned up CSS file and removed some components.
